[gd_scene load_steps=4 format=3 uid="uid://d2mpo6a2mpgy"]

[ext_resource type="Script" uid="uid://bpga4casjmfom" path="res://code/results_screen.gd" id="1"]
[ext_resource type="Shader" uid="uid://cfblt4i8k43f7" path="res://shaders/pause_blur.gdshader" id="2_ngmsw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ysej"]
shader = ExtResource("2_ngmsw")
shader_parameter/blur_radius = 4.0
shader_parameter/sample_count = 4
shader_parameter/darken = 0.6

[node name="ResultsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -979.0
offset_top = -554.0
offset_right = -979.0
offset_bottom = -554.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BlurOverlay" type="ColorRect" parent="."]
z_index = -1
z_as_relative = false
material = SubResource("ShaderMaterial_8ysej")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1179.0
offset_top = -651.0
offset_right = 1217.0
offset_bottom = 764.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2865.0
offset_top = -1853.0
offset_right = 2860.0
offset_bottom = 1920.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85098)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Results"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PerfectRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/PerfectRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PERFECT"

[node name="Value" type="Label" parent="Panel/VBoxContainer/PerfectRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="GreatRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/GreatRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GREAT"

[node name="Value" type="Label" parent="Panel/VBoxContainer/GreatRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="GoodRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/GoodRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "GOOD"

[node name="Value" type="Label" parent="Panel/VBoxContainer/GoodRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="OkRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/OkRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "OK"

[node name="Value" type="Label" parent="Panel/VBoxContainer/OkRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="MissRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/MissRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MISS"

[node name="Value" type="Label" parent="Panel/VBoxContainer/MissRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="ComboRow" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/ComboRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Combo / Max Combo"

[node name="Value" type="Label" parent="Panel/VBoxContainer/ComboRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
horizontal_alignment = 2

[node name="Accuracy" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1392.0
offset_top = -377.0
offset_right = -1115.0
offset_bottom = -271.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Accuracy"
horizontal_alignment = 2
vertical_alignment = 2

[node name="AccuracyLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -809.0
offset_top = -367.0
offset_right = -536.0
offset_bottom = -261.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "100.00%"
horizontal_alignment = 2
vertical_alignment = 2

[node name="GradeImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 752.0
offset_top = 368.0
offset_right = -715.0
offset_bottom = -457.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="RetryButton" type="Button" parent="."]
z_index = 6
layout_mode = 0
offset_left = 1103.0
offset_top = 848.0
offset_right = 1410.0
offset_bottom = 993.0
theme_override_font_sizes/font_size = 100
text = "RETRY"

[node name="BackButton" type="Button" parent="."]
z_index = 6
layout_mode = 0
offset_left = 510.0
offset_top = 848.0
offset_right = 777.0
offset_bottom = 993.0
theme_override_font_sizes/font_size = 100
text = "BACK"

[node name="BestScoresPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 1425.0
offset_top = 240.0
offset_right = 1698.0
offset_bottom = 840.0

[node name="ScoresList" type="VBoxContainer" parent="BestScoresPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 55.0
offset_right = 48.0
offset_bottom = 95.0
alignment = 1

[node name="Label" type="Label" parent="BestScoresPanel"]
layout_mode = 0
offset_left = 22.0
offset_top = 6.0
offset_right = 247.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 32
text = "Personal bests"
horizontal_alignment = 1
vertical_alignment = 1
